force-app/main/default/objects/Contract/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <formula>FIN_EventLookup__r.FIN_EventID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event ID</label>
    <type>Text</type>
</CustomField>