force-app/main/default/objects/Contract/fields/FIN_Account_Manager_Portal__c.field-meta.xml
<CustomField>
    <fullName>FIN_Account_Manager_Portal__c</fullName>
    <formula>Account.Owner.FirstName &amp;&quot; &quot;&amp;  Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>