force-app/main/default/objects/Contract/fields/FIN_Account_Name_Portal__c.field-meta.xml
<CustomField>
    <fullName>FIN_Account_Name_Portal__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>