force-app/main/default/objects/Contract/fields/FIN_AccountTextName__c.field-meta.xml
<CustomField>
    <fullName>FIN_AccountTextName__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Text Name</label>
    <type>Text</type>
</CustomField>