force-app/main/default/objects/Contract/fields/FIN_Active_Base_Ticket_Sales__c.field-meta.xml
<CustomField>
    <fullName>FIN_Active_Base_Ticket_Sales__c</fullName>
    <label>Active &apos;Base&apos; Ticket Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>