force-app/main/default/objects/Contract/fields/FIN_ActiveStatus__c.field-meta.xml
<CustomField>
    <fullName>FIN_ActiveStatus__c</fullName>
    <formula>TODAY()&gt;= StartDate &amp;&amp;
TODAY()&lt;= EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Status</label>
    <type>Checkbox</type>
</CustomField>