force-app/main/default/objects/Contract/fields/FIN_ActiveSubcontracts__c.field-meta.xml
<CustomField>
    <fullName>FIN_ActiveSubcontracts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Active Subcontracts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>