force-app/main/default/objects/Contract/fields/FIN_Amend_Ext_Renew_1_StartDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_Amend_Ext_Renew_1_StartDate__c</fullName>
    <label>Amend/Ext/Renew 1 - Start Date</label>
    <type>Date</type>
</CustomField>