force-app/main/default/objects/Contract/fields/FIN_Amend_Ext_Renew_2_EndDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_Amend_Ext_Renew_2_EndDate__c</fullName>
    <label>Amend/Ext/Renew 2 - End Date</label>
    <type>Date</type>
</CustomField>