force-app/main/default/objects/Contract/fields/FIN_AXSAccountManager__c.field-meta.xml
<CustomField>
    <fullName>FIN_AXSAccountManager__c</fullName>
    <description>Pulls from Account Owner field from Account (common name)</description>
    <formula>Account.Owner.FirstName  + &apos; &apos; + Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AXS Account Manager</label>
    <type>Text</type>
</CustomField>