force-app/main/default/objects/Contract/fields/FIN_BaseRate_UnitCost__c.field-meta.xml
<CustomField>
    <fullName>FIN_BaseRate_UnitCost__c</fullName>
    <label>Base Rate (Unit Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>