force-app/main/default/objects/Contract/fields/FIN_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>FIN_Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>FIN_BusinessUnit__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>