force-app/main/default/objects/Contract/fields/FIN_Chart_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>FIN_Chart_of_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Statistical Chart of Accounts</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FIN_ChartOfAccounts__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>US Statistical Chart of Accounts</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FIN_ChartOfAccounts__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>