force-app/main/default/objects/Contract/fields/FIN_CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>FIN_CompanyCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Code</label>
    <referenceTo>FIN_CompanyCode__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>