force-app/main/default/objects/Contract/fields/FIN_Context__c.field-meta.xml
<CustomField>
    <fullName>FIN_Context__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Context</label>
    <referenceTo>FIN_Context__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>