force-app/main/default/objects/Contract/fields/FIN_CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>FIN_CustomerNumber__c</fullName>
    <label>Customer #</label>
    <length>250</length>
    <type>Text</type>
</CustomField>