force-app/main/default/objects/Contract/fields/FIN_Email_Side_Agreement_EndDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_Email_Side_Agreement_EndDate__c</fullName>
    <label>Email Side/Agreement - End Date</label>
    <type>Date</type>
</CustomField>