force-app/main/default/objects/Contract/fields/FIN_Email_Side_Agreement_StartDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_Email_Side_Agreement_StartDate__c</fullName>
    <label>Email Side/Agreement - Start Date</label>
    <type>Date</type>
</CustomField>