force-app/main/default/objects/Contract/fields/FIN_EventLookup__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Name</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>