force-app/main/default/objects/Contract/fields/FIN_EventName__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventName__c</fullName>
    <label>Event Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>