force-app/main/default/objects/Contract/fields/FIN_EventZone__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventZone__c</fullName>
    <label>Event Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>