force-app/main/default/objects/Contract/fields/FIN_Financial_Standard__c.field-meta.xml
<CustomField>
    <fullName>FIN_Financial_Standard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Standard</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a financial standard</errorMessage>
        <filterItems>
            <field>FIN_Standardization__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Financial Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FIN_Standardization__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>