force-app/main/default/objects/Contract/fields/FIN_InvoiceRate_del__c.field-meta.xml
<CustomField>
    <fullName>FIN_InvoiceRate_del__c</fullName>
    <label>Invoice Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>