force-app/main/default/objects/Contract/fields/FIN_Jurisdiction_Tax_Rates__c.field-meta.xml
<CustomField>
    <fullName>FIN_Jurisdiction_Tax_Rates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jurisdiction Tax Rates</label>
    <referenceTo>FIN_Jurisdiction_Tax_Rates__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>