force-app/main/default/objects/Contract/fields/FIN_JurisdictionTaxRateNum__c.field-meta.xml
<CustomField>
    <fullName>FIN_JurisdictionTaxRateNum__c</fullName>
    <formula>FIN_Jurisdiction_Tax_Rates__r.Tax_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jurisdiction Tax Rate num</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>