force-app/main/default/objects/Contract/fields/FIN_LegalName__c.field-meta.xml
<CustomField>
    <fullName>FIN_LegalName__c</fullName>
    <description>Pulls from an account field of the same name to display read only text of Legal Name</description>
    <formula>Account.FIN_LegalName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Name</label>
    <type>Text</type>
</CustomField>