force-app/main/default/objects/Contract/fields/FIN_ParentContract__c.field-meta.xml
<CustomField>
    <fullName>FIN_ParentContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Contract</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contract.RecordTypeId</field>
            <operation>equals</operation>
            <value>US Master</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>SubContracts</relationshipLabel>
    <relationshipName>SubContracts</relationshipName>
    <type>Lookup</type>
</CustomField>