force-app/main/default/objects/Contract/fields/FIN_RemittanceAccount__c.field-meta.xml
<CustomField>
    <fullName>FIN_RemittanceAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remittance Account</label>
    <referenceTo>FIN_Payee__c</referenceTo>
    <relationshipLabel>Contracts (Remittance Account)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>