force-app/main/default/objects/Contract/fields/FIN_Settlement_Frequency__c.field-meta.xml
<CustomField>
    <fullName>FIN_Settlement_Frequency__c</fullName>
    <description>Define the settlement frequency on the settlement process</description>
    <label>Settlement Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Biweekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Post event</fullName>
                <isActive>false</isActive>
                <label>Post event</label>
            </value>
            <value>
                <fullName>Weekly advance</fullName>
                <isActive>false</isActive>
                <label>Weekly advance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>