force-app/main/default/objects/Contract/fields/FIN_SettlementReportGroup__c.field-meta.xml
<CustomField>
    <fullName>FIN_SettlementReportGroup__c</fullName>
    <label>Settlement Report Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group 1</fullName>
            </value>
            <value>
                <fullName>Group 2</fullName>
            </value>
            <value>
                <fullName>Group 3</fullName>
            </value>
            <value>
                <fullName>Group 4</fullName>
            </value>
            <value>
                <fullName>Group 5</fullName>
            </value>
            <value>
                <fullName>Standalone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>