force-app/main/default/objects/Contract/fields/FIN_SettlementReportMode__c.field-meta.xml
<CustomField>
    <fullName>FIN_SettlementReportMode__c</fullName>
    <label>Settlement Report Mode</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RollUp with Contract</fullName>
            </value>
            <value>
                <fullName>RollUp with SubTotals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>