force-app/main/default/objects/Contract/fields/FIN_Statistical_Chart_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>FIN_Statistical_Chart_of_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Statistical Chart of Accounts</label>
    <referenceTo>FIN_StatisticalChartOfAccounts__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>