force-app/main/default/objects/Contract/fields/FIN_Statistical_Standard__c.field-meta.xml
<CustomField>
    <fullName>FIN_Statistical_Standard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Statistical Standard</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a Statistical Standardization</errorMessage>
        <filterItems>
            <field>FIN_Standardization__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Statistical Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FIN_Standardization__c</referenceTo>
    <relationshipLabel>Statistical Standard</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>