force-app/main/default/objects/Contract/fields/FIN_StatusFlag__c.field-meta.xml
<CustomField>
    <fullName>FIN_StatusFlag__c</fullName>
    <formula>IF (
TODAY()&gt;= StartDate &amp;&amp; TODAY()&lt;= EndDate,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;) + &apos; Active&apos;,
IMAGE(&apos;/img/samples/flag_red.gif&apos;, &apos;red&apos;) + &apos; Inactive&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>