force-app/main/default/objects/Contract/fields/FIN_TaxInformation__c.field-meta.xml
<CustomField>
    <fullName>FIN_TaxInformation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Information</label>
    <referenceTo>FIN_Payee__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>