force-app/main/default/objects/Contract/fields/FIN_TicketFeesSubjectToTax__c.field-meta.xml
<CustomField>
    <fullName>FIN_TicketFeesSubjectToTax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ticket Fees Subject to Tax?</label>
    <type>Checkbox</type>
</CustomField>