force-app/main/default/objects/Contract/fields/FIN_TotalSubcontracts__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalSubcontracts__c</fullName>
    <label>Total Subcontracts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>