force-app/main/default/objects/Contract/fields/FIN_Venue__c.field-meta.xml
<CustomField>
    <fullName>FIN_Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Venue</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>