force-app/main/default/objects/Contract/fields/FIN_W9_Entity1_EndDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_W9_Entity1_EndDate__c</fullName>
    <label>W9 Entity 1 - End Date</label>
    <type>Date</type>
</CustomField>