force-app/main/default/objects/Contract/fields/FIN_W9_Entity2_StartDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_W9_Entity2_StartDate__c</fullName>
    <label>W9 Entity 2 - Start Date</label>
    <type>Date</type>
</CustomField>