force-app/main/default/objects/Contract/fields/Primary_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>