force-app/main/default/objects/Contract/fields/Subledger_Code__c.field-meta.xml
<CustomField>
    <fullName>Subledger_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subledger Code</label>
    <referenceTo>FIN_SubledgerCode__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>