force-app/main/default/objects/Contract/recordTypes/FIN_SWE_Master_Contract.recordType-meta.xml
<RecordType>
    <fullName>FIN_SWE_Master_Contract</fullName>
    <active>true</active>
    <label>SWE Master Contract</label>
</RecordType>