force-app/main/default/objects/Contract/recordTypes/FIN_SWE_Subcontract.recordType-meta.xml
<RecordType>
    <fullName>FIN_SWE_Subcontract</fullName>
    <active>true</active>
    <label>SWE Subcontract</label>
</RecordType>