force-app/main/default/objects/Contract/recordTypes/FIN_UK_Master_Contract.recordType-meta.xml
<RecordType>
    <fullName>FIN_UK_Master_Contract</fullName>
    <active>true</active>
    <label>UK Master Contract</label>
</RecordType>