force-app/main/default/objects/Contract/recordTypes/FIN_UK_Subcontract.recordType-meta.xml
<RecordType>
    <fullName>FIN_UK_Subcontract</fullName>
    <active>true</active>
    <label>UK Subcontract</label>
</RecordType>