force-app/main/default/objects/Contract/recordTypes/FIN_US_Master_Contract.recordType-meta.xml
<RecordType>
    <fullName>FIN_US_Master_Contract</fullName>
    <active>true</active>
    <label>US Master Contract</label>
</RecordType>