force-app/main/default/objects/Contract/recordTypes/FIN_US_Subcontract.recordType-meta.xml
<RecordType>
    <fullName>FIN_US_Subcontract</fullName>
    <active>true</active>
    <label>US Subcontract</label>
</RecordType>