force-app/main/default/objects/Contract/recordTypes/FIN_USMaster.recordType-meta.xml
<RecordType>
    <fullName>FIN_USMaster</fullName>
    <active>true</active>
    <label>US Master</label>
</RecordType>