force-app/main/default/objects/Contract/recordTypes/FIN_USSubContract.recordType-meta.xml
<RecordType>
    <fullName>FIN_USSubContract</fullName>
    <active>true</active>
    <label>US SubContract</label>
</RecordType>