force-app/main/default/objects/Contract/validationRules/Enforce_Right_Currency_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Right_Currency_Contract</fullName>
    <active>true</active>
    <description>Validation checks whether the given currency is consistent with the given Record Type.</description>
    <errorConditionFormula>OR(
  AND( (RecordType.Name == &apos;SWE Master Contract&apos; || RecordType.Name == &apos;SWE Subcontract&apos;),!ISPICKVAL(CurrencyIsoCode,&apos;SEK&apos;)),
  AND( (RecordType.Name == &apos;UK Master Contract&apos; || RecordType.Name == &apos;UK Subcontract&apos;), !ISPICKVAL(CurrencyIsoCode ,&apos;GBP&apos;)),
  AND( (RecordType.Name == &apos;US Master Contract&apos; || RecordType.Name == &apos;US Subcontract&apos;), !ISPICKVAL(CurrencyIsoCode ,&apos;USD&apos;))

)</errorConditionFormula>
    <errorMessage>The Currency must match the Record Type.</errorMessage>
</ValidationRule>