force-app/main/default/objects/Contract/validationRules/Jurisdiction_Needed_if_Ticket_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Jurisdiction_Needed_if_Ticket_Fee</fullName>
    <active>true</active>
    <errorConditionFormula>AND(FIN_TicketFeesSubjectToTax__c ,ISBLANK( FIN_Jurisdiction_Tax_Rates__c ))</errorConditionFormula>
    <errorMessage>Select Jurisdiction tax rate, as &quot;Ticket Fees Subject to Tax&quot; is checked</errorMessage>
</ValidationRule>