force-app/main/default/objects/Contract/validationRules/Subcontract_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Subcontract_Required</fullName>
    <active>true</active>
    <description>Count of Total Subcontracts must be greater than 0 to allow contract to be activated</description>
    <errorConditionFormula>AND(
  
   ISCHANGED(Status),
   RecordType.Name  = &apos;US Master&apos;,
   ISPICKVAL( Status, &apos;Activated&apos;),

   OR(   NOT(ISPICKVAL( ApprovalStatus__c, &apos;Approved&apos;)),
     (FIN_TotalSubcontracts__c= 0 || FIN_TotalSubcontracts__c= null))
   
)</errorConditionFormula>
    <errorMessage>Wrong value of  Approval Status or no Subcontracts</errorMessage>
</ValidationRule>