force-app/main/default/objects/Contract/listViews/All_Draft_ContractsOnly.listView-meta.xml
<ListView>
    <fullName>All_Draft_ContractsOnly</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>FIN_StatusFlag__c</columns>
    <columns>FIN_ActiveSubcontracts__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>D</value>
    </filters>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.FIN_US_Master_Contract</value>
    </filters>
    <label>All Draft Contracts</label>
</ListView>